Prevent layout shift when moving to hourly forecast with spacer div, add scroll effect

--- a/src/app/home.css
+++ b/src/app/home.css
@@ -219,6 +219,7 @@ select {
   display: flex;
   flex-direction: column;
   align-items: center;
+  animation: fadeIn ease-in 0.5s;
 }
 
 .hourly-forecast-header {
